tests/netedit/demandelements/waypoint/basic/invalid_type/log.netedit
Warning: Selected Stop type isn't valid.
Warning: Stop must be placed over a route's edge
